--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=Unishox
 version=1.0.3
 author=Arundale Ramanathan
-maintainer=Arun <arun@siara.cc>
-sentence=Unishox Compression library for Arduino UNO and up
+license=Apache License 2.0
+maintainer=Particle Support <https://support.particle.io/>
+sentence=Unishox Compression library for Particle platforms
 paragraph=Compress short strings and messages and save upto 60% space
 category=Data Storage
-url=https://github.com/siara-cc/Unishox_Arduino_lib
+url=https://github.com/particle-iot/unishox
 architectures=*
